1-vpc.tf
# Resource: aws_vpc
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/vpc
# Criação da VPC com classe A ip   
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "cluster-eks-devops" # Nome da VPC 
  }
}
